# aw-basisu

./: .gitmodules  LICENSE  README.md  aw-basisu-bindings.asd  aw-basisu.asd
.github/workflows/: build.yaml
bindings/: aarch64-linux-android.lisp  x86_64-pc-linux-gnu.lisp  x86_64-w64-mingw32.lisp
example/: README.md  brick_1.ktx2  example.lisp
src/: claw.lisp
src/lib/: CMakeLists.txt  build.ps1  build.sh
src/lib/adapter/: adapter.aarch64-linux-android.cxx  adapter.x86_64-pc-linux-gnu.cxx  adapter.x86_64-w64-mingw32.cxx
